--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Better support for INCLUDES in where clauses",
-            "versionNumber": "1.7.6.0",
+            "versionName": "More multi-currency bugfixes",
+            "versionNumber": "1.7.7.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -102,16 +102,8 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc": "04t5Y0000015oRNQAY",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.6.34": "04t6g000008OfJfAAK",
-        "apex-rollup@1.6.35": "04t6g000008OfKiAAK",
-        "apex-rollup@1.6.36": "04t6g000008OfMeAAK",
-        "apex-rollup@1.6.37": "04t6g000008OfSEAA0",
-        "apex-rollup@1.7.0": "04t6g000008OfTvAAK",
-        "apex-rollup@1.7.1": "04t6g000008OfWQAA0",
-        "apex-rollup@1.7.2": "04t6g000008OfXTAA0",
-        "apex-rollup@1.7.3": "04t6g000008OfdwAAC",
-        "apex-rollup@1.7.4": "04t6g000008OfezAAC",
         "apex-rollup@1.7.5": "04t6g000008OfqTAAS",
-        "apex-rollup@1.7.6": "04t6g000008Ofr7AAC"
+        "apex-rollup@1.7.6": "04t6g000008Ofr7AAC",
+        "apex-rollup@1.7.7": "04t6g000008OfrlAAC"
     }
 }
