--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "More multi-currency bugfixes",
-            "versionNumber": "1.7.7.0",
+            "versionName": "Properly handle namespaced and other Type__c fields in RollupCalcItemReplacer",
+            "versionNumber": "1.7.8.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -104,6 +104,7 @@
         "apex-rollup": "0Ho6g000000TNcOCAW",
         "apex-rollup@1.7.5": "04t6g000008OfqTAAS",
         "apex-rollup@1.7.6": "04t6g000008Ofr7AAC",
-        "apex-rollup@1.7.7": "04t6g000008OfrlAAC"
+        "apex-rollup@1.7.7": "04t6g000008OfrlAAC",
+        "apex-rollup@1.7.8": "04t6g000008OfrvAAC"
     }
 }
