Allows flow builders to perform singular parent recalcs through both full recalc flow actions

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Allows individual rollup records to be disabled on Rollup Metadata records",
-            "versionNumber": "1.7.10.0",
+            "versionName": "Allow singular parent records to be recalculated through flow full recalc invocables",
+            "versionNumber": "1.7.11.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
