--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,9 @@ jobs:
           java-version: '17'
 
       - name: Install & run SFDX Scanner
-        run: npm run scan
+        run: |
+          npx sf plugins install code-analyzer
+          npm run scan
 
       # Authenticate using JWT flow
       - name: 'Auth to dev hub'
