--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Removes Data.com test dependencies, update to sf code-analyzer",
-            "versionNumber": "1.7.12.0",
+            "versionName": "Should skip resetting parent fields applies to default values on full recalc",
+            "versionNumber": "1.7.13.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -109,6 +109,7 @@
         "apex-rollup@1.7.9": "04t6g000008OfsPAAS",
         "apex-rollup@1.7.10": "04t6g000008OftNAAS",
         "apex-rollup@1.7.11": "04t6g000008OfuLAAS",
-        "apex-rollup@1.7.12": "04tKf000000sxuWIAQ"
+        "apex-rollup@1.7.12": "04tKf000000sxuWIAQ",
+        "apex-rollup@1.7.13": "04tKf000000sxvFIAQ"
     }
 }
