--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -34,14 +34,14 @@
             "path": "plugins\\NebulaLogger",
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.5.20-0"
+                    "package": "apex-rollup@1.7.0"
                 },
                 {
-                    "package": "Nebula Logger - Core@4.8.0-NEXT-ignore-origin-method"
+                    "package": "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc"
                 }
             ],
-            "versionNumber": "0.0.8.0",
-            "versionName": "Adding base Rollup string and version number",
+            "versionNumber": "0.0.9.0",
+            "versionName": "Fixes failing test ",
             "versionDescription": "Provides an adapter that hooks rollup debug logging up to Nebula Logger",
             "default": false,
             "unpackagedMetadata": {
@@ -97,6 +97,7 @@
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
+        "Apex Rollup - Nebula Logger@0.0.9": "04tKf000000sxvjIAA",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
