--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -69,12 +69,12 @@
             "package": "Apex Rollup - Extra Code Coverage",
             "versionDescription": "This plugin adds code coverage for Apex Rollup if you need additional code coverage for the base package",
             "versionName": "Updating code coverage",
-            "versionNumber": "0.0.25.0",
+            "versionNumber": "0.0.26.0",
             "default": false,
             "scopeProfiles": true,
             "dependencies": [
                 {
-                    "package": "apex-rollup@1.7.0"
+                    "package": "apex-rollup@1.7.13"
                 }
             ]
         },
@@ -91,9 +91,9 @@
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
         "Apex Rollup - Custom Logger@0.0.12-0": "04t6g000008SjqIAAS",
         "Apex Rollup - Extra Code Coverage": "0Ho6g000000GnCWCA0",
-        "Apex Rollup - Extra Code Coverage@0.0.23": "04t6g000008ObVmAAK",
         "Apex Rollup - Extra Code Coverage@0.0.24": "04t6g000008ObgCAAS",
         "Apex Rollup - Extra Code Coverage@0.0.25": "04t6g000008OfSiAAK",
+        "Apex Rollup - Extra Code Coverage@0.0.26": "04tKf000000sxvyIAA",
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
