--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -97,7 +97,7 @@
         "Apex Rollup - Nebula Logger": "0Ho6g000000Gn8PCAS",
         "Apex Rollup - Nebula Logger@0.0.7-0": "04t6g000008b0O7AAI",
         "Apex Rollup - Nebula Logger@0.0.8-0": "04t6g000007zM6tAAE",
-        "Apex Rollup - Nebula Logger@0.0.9": "04tKf000000sxvjIAA",
+        "Apex Rollup - Nebula Logger@0.0.9": "04tKf000000sxw3IAA",
         "Apex Rollup - Rollup Callback": "0Ho6g000000GnA1CAK",
         "Apex Rollup - Rollup Callback@0.0.2-0": "04t6g000008ShztAAC",
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
