--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Should skip resetting parent fields applies to default values on full recalc",
-            "versionNumber": "1.7.13.0",
+            "versionName": "Fixes an issue where parent reset processors were not arranging full recalc cabooses correctly",
+            "versionNumber": "1.7.14.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,14 +103,11 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc": "04t5Y0000015oRNQAY",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.7.5": "04t6g000008OfqTAAS",
-        "apex-rollup@1.7.6": "04t6g000008Ofr7AAC",
-        "apex-rollup@1.7.7": "04t6g000008OfrlAAC",
-        "apex-rollup@1.7.8": "04t6g000008OfrvAAC",
         "apex-rollup@1.7.9": "04t6g000008OfsPAAS",
         "apex-rollup@1.7.10": "04t6g000008OftNAAS",
         "apex-rollup@1.7.11": "04t6g000008OfuLAAS",
         "apex-rollup@1.7.12": "04tKf000000sxuWIAQ",
-        "apex-rollup@1.7.13": "04tKf000000sxvFIAQ"
+        "apex-rollup@1.7.13": "04tKf000000sxvFIAQ",
+        "apex-rollup@1.7.14": "04tKf000000sxxzIAA"
     }
 }
