--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Recalc parent quick action properly waits for rollups to complete",
-            "versionNumber": "1.7.16.0",
+            "versionName": "Fixes issue with inadvertent special handling for non-polymorphic type fields in parent where clauses",
+            "versionNumber": "1.7.17.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -110,6 +110,7 @@
         "apex-rollup@1.7.13": "04tKf000000sxvFIAQ",
         "apex-rollup@1.7.14": "04tKf000000sxxzIAA",
         "apex-rollup@1.7.15": "04tKf000000sy3ZIAQ",
-        "apex-rollup@1.7.16": "04tKf000000sy3oIAA"
+        "apex-rollup@1.7.16": "04tKf000000sy3oIAA",
+        "apex-rollup@1.7.17": "04tKf000000sy3yIAA"
     }
 }
