--- a/package.json
+++ b/package.json
@@ -54,6 +54,6 @@
     "scan:pmd": "sf code-analyzer run -r pmd:1 -r pmd:2 -r pmd:3 --workspace rollup/core/**/*.cls --workspace plugins --workspace extra-tests",
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
-    "test:lwc": "sfdx-lwc-jest --coverage --skipApiVersionCheck"
+    "test:lwc": "sfdx-lwc-jest --coverage"
   }
 }
