--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Fixes issue with invalid field names false positive errors when using rollups started from parent in conjunction with Rollup__mdt-based Flow rollups",
-            "versionNumber": "1.7.20.0",
+            "versionName": "Fixes issue with where clauses that end with colon-delimited date literals",
+            "versionNumber": "1.7.21.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -103,12 +103,6 @@
         "Apex Rollup - Rollup Callback@0.0.3-0": "04t6g000008Sis0AAC",
         "Nebula Logger - Core@4.14.4-optionally-auto-call-lightning-logger-lwc": "04t5Y0000015oRNQAY",
         "apex-rollup": "0Ho6g000000TNcOCAW",
-        "apex-rollup@1.7.9": "04t6g000008OfsPAAS",
-        "apex-rollup@1.7.10": "04t6g000008OftNAAS",
-        "apex-rollup@1.7.11": "04t6g000008OfuLAAS",
-        "apex-rollup@1.7.12": "04tKf000000sxuWIAQ",
-        "apex-rollup@1.7.13": "04tKf000000sxvFIAQ",
-        "apex-rollup@1.7.14": "04tKf000000sxxzIAA",
         "apex-rollup@1.7.15": "04tKf000000sy3ZIAQ",
         "apex-rollup@1.7.16": "04tKf000000sy3oIAA",
         "apex-rollup@1.7.17": "04tKf000000sy3yIAA",
