--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Fixes issue with where clauses that end with colon-delimited date literals",
-            "versionNumber": "1.7.21.0",
+            "versionName": "Trims down RollupRepository query and adds additional logging for no-op scenarios and finalizer start/finish",
+            "versionNumber": "1.7.22.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
