--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   "license": "MIT",
   "devDependencies": {
     "@jongpie/sfdx-bummer-plugin": "^0.0.20",
-    "@lwc/eslint-plugin-lwc": "2.1.0",
+    "@lwc/eslint-plugin-lwc": "3.2.0",
     "@prettier/plugin-xml": "3.4.1",
     "@salesforce/cli": "2.75.5",
-    "@salesforce/eslint-config-lwc": "3.7.1",
-    "@salesforce/eslint-plugin-lightning": "1.0.1",
-    "@salesforce/sfdx-lwc-jest": "7.0.1",
-    "@salesforce/sfdx-scanner": "^4.12.0",
+    "@salesforce/eslint-config-lwc": "4.0.0",
+    "@salesforce/eslint-plugin-lightning": "2.0.0",
+    "@salesforce/sfdx-lwc-jest": "7.1.0",
+    "@salesforce/plugin-code-analyzer": "^5.3.0",
     "husky": "9.1.7",
     "lint-staged": "15.4.3",
     "prettier": "3.4.2",
@@ -47,11 +47,10 @@
     "husky:pre-commit": "lint-staged",
     "install:currency:data": "sf data import tree --files ./config/data/CurrencyTypes.json",
     "install:nebula:logger": "sf package install -p 04t5Y0000015oRNQAY -w 10 -r",
-    "lint:verify": "sf code-analyzer run --rule-selector eslint",
+    "lint:verify": "sf code-analyzer run --rule-selector eslint --workspace rollup",
     "prepare": "husky",
     "prettier": "prettier",
-    "scan": "npm run lint:verify && npm run scan:pmd",
-    "scan:pmd": "sf code-analyzer run -r pmd:1 -r pmd:2 -r pmd:3 --workspace rollup/core/**/*.cls --workspace plugins --workspace extra-tests",
+    "scan": "sf code-analyzer run -r pmd:ApexRollupRules -r pmd:1 -r pmd:2 -r pmd:3 -r eslint --workspace rollup/**/*.cls --workspace plugins --workspace extra-tests",
     "test": "npm run test:apex && npm run test:lwc",
     "test:apex": "sh ./scripts/runLocalTests.sh",
     "test:lwc": "sfdx-lwc-jest --coverage"
