--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -118,8 +118,8 @@ jobs:
         shell: pwsh
         if: ${{ env.SHOULD_CREATE_AND_PROMOTE == '1' && github.actor == github.event.repository.owner.login && (github.base_ref == 'main' || github.ref == 'refs/heads/main') }}
         run: |
-          echo y |npx sf plugins install @jongpie/sfdx-bummer-plugin
-          '. ./scripts/build-and-promote-package.ps1'
+          echo y | npx sf plugins install @jongpie/sfdx-bummer-plugin
+          . ./scripts/build-and-promote-package.ps1
         env:
           SHOULD_CREATE_AND_PROMOTE: ${{ secrets.SHOULD_CREATE_AND_PROMOTE }}
 
