--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Updates finalizer code paths to avoid re-queueing more than once during a full recalc",
-            "versionNumber": "1.7.27.0",
+            "versionName": "Fixes an issue reported by internal colleague when orgs do not have all fiscal info set up",
+            "versionNumber": "1.7.28.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
