--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -5,8 +5,8 @@
             "package": "apex-rollup",
             "path": "rollup",
             "scopeProfiles": true,
-            "versionName": "Ensure RollupOrderBy__mdt.ShouldOverridePicklistOrdering__c is always queried!",
-            "versionNumber": "1.7.32.0",
+            "versionName": "Use new Invocable Action Extensions to clean up and organize the Rollup flow invocable action menus",
+            "versionNumber": "1.7.33.0",
             "versionDescription": "Fast, configurable, elastically scaling custom rollup solution. Apex Invocable action, one-liner Apex trigger/CMDT-driven logic, and scheduled Apex-ready.",
             "releaseNotesUrl": "https://github.com/jamessimone/apex-rollup/releases/latest",
             "unpackagedMetadata": {
@@ -85,7 +85,7 @@
     ],
     "namespace": "",
     "sfdcLoginUrl": "https://login.salesforce.com",
-    "sourceApiVersion": "64.0",
+    "sourceApiVersion": "65.0",
     "packageAliases": {
         "Apex Rollup - Custom Logger": "0Ho6g000000Gn8ZCAS",
         "Apex Rollup - Custom Logger@0.0.11-0": "04t6g000008SirvAAC",
@@ -107,6 +107,7 @@
         "apex-rollup@1.7.29": "04tKf000000syDBIAY",
         "apex-rollup@1.7.30": "04tKf000000syDfIAI",
         "apex-rollup@1.7.31": "04tKf000000syDpIAI",
-        "apex-rollup@1.7.32": "04tKf000000syDzIAI"
+        "apex-rollup@1.7.32": "04tKf000000syDzIAI",
+        "apex-rollup@1.7.33": "04tKf000000syETIAY"
     }
 }
